# ipu-stack

./: .gitignore  Cargo.toml  README.md
crates/ipu-cli/: Cargo.toml
crates/ipu-cli/src/: main.rs  profile_report.html
crates/ipu-compiler/: Cargo.toml
crates/ipu-compiler/src/: attention.rs  lib.rs  mlp.rs  placement.rs  rowwise.rs  siglip.rs
crates/ipu-driver/: Cargo.toml
crates/ipu-driver/src/: lib.rs
crates/ipu-elf/: Cargo.toml
crates/ipu-elf/src/: lib.rs
crates/ipu-exchange/: Cargo.toml
crates/ipu-exchange/src/: lib.rs
crates/ipu-models/: Cargo.toml
crates/ipu-models/src/: lib.rs
crates/ipu-package/: Cargo.toml  build.rs
crates/ipu-package/src/: lib.rs  memory_profile.rs
crates/ipu-profile/: Cargo.toml
crates/ipu-profile/src/: lib.rs
crates/ipu-runtime/: Cargo.toml
crates/ipu-runtime/src/: blocked_data.rs  lib.rs  placement.rs  siglip.rs  static_codegen.rs
crates/ipu-runtime/tests/: hardware_e2e.rs
device/: add_bias_f16.S  add_f16.S  add_u32.S  attention_pack_f16.S  attention_pack_f16.cpp  attention_unpack_f16.S  attention_unpack_f16.cpp  check_finite_f16.S  check_finite_f16.cpp  exchange_loop_runtime.S  exchange_runtime.S  expand_f8_f143_to_f16.S  expand_f8_f143_to_f16.cpp  flash_attention_f16.S  flash_attention_f16.cpp  gelu_relayout_f16.S  gelu_relayout_f32.S  gemm_f16_64_amp.S  gemm_f32_64.S  gemm_f32_64_amp.S  graph_runtime.S  kernels.cpp  layer_norm_f16.S  layer_norm_f16.cpp  quantize_a16_to_a32_f143.S  quantize_a16_to_a32_f143.cpp  reblock_f16.S  relayout_f16.S  runtime.S  static_runtime.S  worker_support.S
docs/: ARCHITECTURE.md  BRINGUP.md  COMPILER_AUDIT.md  FORMAT.md  PROFILING.md
schemas/: application.capnp  memory_profile.capnp  profile.capnp
scripts/: hardware-e2e.sh  hardware-runtime.sh
tools/: prepare_siglip_samples.py  quantize_siglip_f143.py  run_siglip_samples.py  siglip_reference.py
