[workspace]
members = [
  "crates/ipu-package",
  "crates/ipu-elf",
  "crates/ipu-compiler",
  "crates/ipu-driver",
  "crates/ipu-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.100"
capnp = "0.26.2"
capnpc = "0.26.0"
clap = { version = "4.5.54", features = ["derive", "env"] }
hex = "0.4.3"
libc = "0.2.180"
object = { version = "0.39.1", features = ["read_core", "elf"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
zstd = "0.13.3"
