[package]
name = "ipu-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ipu-stack"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
ipu-compiler = { path = "../ipu-compiler" }
ipu-driver = { path = "../ipu-driver" }
ipu-elf = { path = "../ipu-elf" }
ipu-exchange = { path = "../ipu-exchange" }
ipu-package = { path = "../ipu-package" }
ipu-profile = { path = "../ipu-profile" }
object.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
