[package]
name = "ipu-models"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
half.workspace = true
memmap2.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
