[package]
name = "ipu-package"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
capnp.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
zstd.workspace = true

[build-dependencies]
capnpc.workspace = true
